<resources>
    <string name="app_name">Freshup</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="facebook_app_id">542597832886009</string>
    <string name="fb_login_protocol_scheme">fb542597832886009</string>
    <string name="sign_in" translatable="false">SIGN IN</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="or_login_with">Or login with</string>
    <string name="facebook">Facebook</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="user_name">User Name</string>
    <string name="name">Name</string>
    <string name="info_omninos_com">info@omninos.com</string>
    <string name="mobile_no">Mobile No</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="you_have_an_account">you have an account?</string>
    <string name="enter_your_verification_code">Enter your verification code</string>
    <string name="verify_code">Verify Code</string>
    <string name="resend_verification_code">Resend Verification Code</string>
    <string name="your_mobile_number_successfully_verified">Your Mobile Number Successfully Verified.</string>
    <string name="done">Done</string>
    <string name="home">HOME</string>
    <string name="cart">CART</string>
    <string name="orders">ORDERS</string>
    <string name="appoint">APPOINT</string>
    <string name="services">Services</string>
    <string name="products">Products</string>
    <string name="join_queue">JOIN QUEUE</string>
    <string name="phone_number">Phone Number</string>
    <string name="log_out">LOG OUT</string>
    <string name="profile">Profile</string>
    <string name="change_password">Change Password</string>
    <string name="faq">FAQ</string>
    <string name="terms_and_conditions">Terms and Conditions</string>
    <string name="settings">Settings</string>
    <string name="change_language">Change Language</string>
    <string name="delivery_address">Delivery Address</string>
    <string name="country">Country</string>
    <string name="state">State</string>
    <string name="city">City</string>
    <string name="address">Address</string>
    <string name="zip_code">Zip Code</string>
    <string name="proceed">Proceed</string>
    <string name="forgot_password_text">Forgot Password</string>
    <string name="send_my_password">send my password</string>
    <string name="email">Email</string>

    <string name="enter_your_mobile_number">Enter your mobile number</string>
    <string name="verification">Verification</string>
    <string name="continue_move">Continue</string>
    <string name="barber_name">Barber Name</string>
    <string name="appointment_date">Appointment Date</string>
    <string name="time_slot">Time Slot</string>
    <string name="price">Price</string>
    <string name="pay">Pay</string>
    <string name="payment">Payment</string>
    <string name="stripe">Stripe</string>
    <string name="paypal">Paypal</string>
    <string name="cash">Cash</string>
    <string name="surname">Surname</string>
    <string name="card_number">Card Number</string>
    <string name="expiry_date">Expiry Date</string>
    <string name="cvv">CVV</string>
    <string name="verify">Verify</string>
    <string name="promo_code">Promo Code</string>
    <string name="enter_your_promo_code">Enter your promo code</string>
    <string name="promo">Promo</string>
    <string name="apply">Apply</string>
    <string name="pick_from_shop">Pick from Shop</string>
    <string name="home_delivery">Home Delivery</string>
    <string name="select_the_date">Select the Date</string>
    <string name="holiday">Holiday</string>
    <string name="pick_a_time_slot">Pick a time slot</string>
    <string name="shop_close">Shop Close</string>
    <string name="cancel">Cancel</string>
    <string name="empty_cart">Empty Cart</string>
    <string name="total_price">Total Price</string>
    <string name="buy">Buy</string>
    <string name="order_history">Order History</string>
    <string name="no_items">No Items</string>
    <string name="appointments">Appointments</string>
    <string name="no_appointment">No Appointment</string>
    <string name="no_past_appointment">No Past Appointment</string>
    <string name="no_upcoming_appointment">No UpComing Appointment</string>
    <string name="in_queue">In Queue -</string>
    <string name="see_queue">See Queue</string>
    <string name="add_to_cart">Add to Cart</string>


</resources>
