<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragment.AddToCartFragment">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="160dp">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="fitXY"
            android:src="@drawable/product_background" />
    </RelativeLayout>

    <TextView
        android:id="@+id/cartText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/dp_10"
        android:text="@string/cart"
        android:textColor="@color/white"
        android:textSize="@dimen/sp_16" />

    <android.support.v7.widget.CardView
        android:id="@+id/settingCard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/totalText"
        android:layout_alignParentTop="true"
        android:layout_marginStart="@dimen/dp_20"
        android:layout_marginTop="@dimen/dp_100"
        android:layout_marginEnd="@dimen/dp_20"
        android:layout_marginBottom="@dimen/dp_10"
        app:cardCornerRadius="@dimen/dp_10">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <android.support.v7.widget.RecyclerView
                android:id="@+id/add_to_card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            </android.support.v7.widget.RecyclerView>

            <TextView
                android:visibility="gone"
                android:id="@+id/emptyCard"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/empty_cart"
                android:textColor="@color/black"
                android:textSize="@dimen/dp_30"
                android:layout_centerInParent="true"/>

        </RelativeLayout>
    </android.support.v7.widget.CardView>


    <TextView
        android:id="@+id/totalText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/buyItems"
        android:layout_marginStart="@dimen/dp_30"
        android:layout_marginBottom="@dimen/dp_10"
        android:text="@string/total_price"
        android:textColor="@color/black"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/totalPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/buyItems"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="@dimen/dp_30"
        android:layout_marginBottom="@dimen/dp_10"
        android:text="€0"
        android:textColor="@color/black"
        android:textStyle="bold" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/totalPrice"
        android:layout_marginStart="@dimen/dp_20"
        android:layout_marginEnd="@dimen/dp_20"
        android:background="#d3d3d3" />

    <Button
        android:id="@+id/buyItems"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="@dimen/dp_40"
        android:layout_marginTop="@dimen/dp_14"
        android:layout_marginEnd="@dimen/dp_80"
        android:layout_marginBottom="@dimen/dp_20"
        android:background="@drawable/button_background"
        android:text="@string/buy"
        android:textColor="@color/white" />
</RelativeLayout>