<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.RegisterActivity">

    <LinearLayout
        android:id="@+id/backImg"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="3">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1.8">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="fitXY"
                android:src="@drawable/backgrond_" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/white" />
    </LinearLayout>

    <ImageView
        android:id="@+id/logo"
        android:layout_width="200dp"
        android:layout_height="@dimen/dp_120"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/dp_20"
        android:src="@drawable/logo1" />

    <android.support.v4.widget.NestedScrollView
        android:layout_below="@id/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

    <android.support.v7.widget.CardView
        android:id="@+id/firstCard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_20"
        android:layout_marginStart="@dimen/dp_20"
        android:layout_marginEnd="@dimen/dp_20"
        app:cardCornerRadius="@dimen/dp_10">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/sinText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/dp_8"
                android:padding="@dimen/dp_2"
                android:text="@string/sign_up"
                android:textAllCaps="true"
                android:textColor="@color/light_yellow"
                android:textSize="@dimen/sp_18"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/sinText"
                android:layout_marginStart="@dimen/dp_10"
                android:layout_marginEnd="@dimen/dp_10"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/userNameText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/dp_2"
                    android:padding="@dimen/dp_4"
                    android:text="@string/user_name"
                    android:textColor="@color/black"
                    android:textSize="@dimen/sp_14" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="38dp"
                    android:background="@drawable/edit_background">

                    <EditText
                        android:id="@+id/userName"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginStart="@dimen/dp_10"
                        android:layout_marginEnd="@dimen/dp_10"
                        android:background="@null"
                        android:drawableStart="@drawable/ic_man_user"
                        android:drawablePadding="@dimen/dp_10"
                        android:hint="@string/name"
                        android:textSize="@dimen/sp_14"
                        android:inputType="textCapWords"
                        android:padding="@dimen/dp_2" />
                </LinearLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/dp_2"
                    android:padding="@dimen/dp_4"
                    android:text="@string/email"
                    android:textColor="@color/black"
                    android:textSize="@dimen/sp_14" />


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="38dp"
                    android:background="@drawable/edit_background">

                    <EditText
                        android:id="@+id/userEmail"
                        android:inputType="textEmailAddress"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginStart="@dimen/dp_10"
                        android:layout_marginEnd="@dimen/dp_10"
                        android:background="@null"
                        android:textSize="@dimen/sp_14"
                        android:drawableStart="@drawable/ic_mail"
                        android:drawablePadding="@dimen/dp_10"
                        android:hint="@string/info_omninos_com"
                        android:padding="@dimen/dp_2" />
                </LinearLayout>
                <TextView
                    android:id="@+id/mobileText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/dp_2"
                    android:padding="@dimen/dp_4"
                    android:text="@string/mobile_no"
                    android:textColor="@color/black"
                    android:textSize="@dimen/sp_14" />
                <LinearLayout
                    android:id="@+id/mobileNo"
                    android:layout_width="match_parent"
                    android:layout_height="38dp"
                    android:background="@drawable/edit_background">


                    <com.hbb20.CountryCodePicker
                        app:ccp_contentColor="@color/black"
                        app:ccp_showFlag="false"
                        app:ccp_autoDetectCountry="true"
                        app:ccp_showNameCode="false"
                        android:paddingStart="@dimen/dp_4"
                        app:ccp_showPhoneCode="true"
                        app:ccpDialog_backgroundColor="@color/white"
                        app:ccpDialog_textColor="@color/black"
                        android:id="@+id/ccp"
                        app:ccp_showFullName="false"
                        android:layout_width="@dimen/dp_80"
                        android:layout_height="match_parent">

                    </com.hbb20.CountryCodePicker>
                    <EditText
                        android:id="@+id/number"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginEnd="@dimen/dp_10"
                        android:background="@null"
                        android:drawablePadding="@dimen/dp_10"
                        android:hint="9999988888"
                        android:inputType="number"
                        android:maxLines="1"
                        android:padding="@dimen/dp_4" />
                </LinearLayout>
                <TextView
                    android:id="@+id/textPassword"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/dp_2"
                    android:padding="@dimen/dp_4"
                    android:text="@string/password"
                    android:textColor="@color/black"
                    android:textSize="@dimen/sp_14" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="38dp"
                    android:background="@drawable/edit_background">

                    <EditText
                        android:id="@+id/userPass"
                        android:inputType="textPassword"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginStart="@dimen/dp_10"
                        android:layout_marginEnd="@dimen/dp_10"
                        android:background="@null"
                        android:drawableStart="@drawable/ic_locked"
                        android:drawablePadding="@dimen/dp_10"
                        android:hint="********"
                        android:textSize="@dimen/sp_14"
                        android:padding="@dimen/dp_2" />
                </LinearLayout>

                <TextView
                    android:id="@+id/confirmpassText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/dp_4"
                    android:padding="@dimen/dp_2"
                    android:text="@string/confirm_password"
                    android:textColor="@color/black"
                    android:textSize="@dimen/sp_14" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="38dp"
                    android:background="@drawable/edit_background">

                    <EditText
                        android:id="@+id/userConfirmPass"
                        android:inputType="textPassword"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginStart="@dimen/dp_10"
                        android:layout_marginEnd="@dimen/dp_10"
                        android:background="@null"
                        android:drawableStart="@drawable/ic_locked"
                        android:drawablePadding="@dimen/dp_10"
                        android:hint="********"
                        android:textSize="@dimen/sp_14"
                        android:padding="@dimen/dp_2" />
                </LinearLayout>
                <Button
                    android:id="@+id/SignUp"
                    android:layout_marginBottom="@dimen/dp_30"
                    android:layout_marginTop="@dimen/dp_20"
                    android:layout_marginStart="@dimen/dp_20"
                    android:layout_marginEnd="@dimen/dp_20"
                    android:text="@string/sign_up"
                    android:textColor="@color/white"
                    android:background="@drawable/button_background"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>
        </RelativeLayout>

    </android.support.v7.widget.CardView>

    <LinearLayout
        android:layout_marginTop="@dimen/dp_20"
        android:layout_below="@id/firstCard"
        android:id="@+id/moveToSingIn"
        android:layout_alignParentBottom="true"
        android:padding="@dimen/dp_10"
        android:layout_width="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/dp_10"
        android:orientation="horizontal"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/haveAcct"
            android:text="@string/you_have_an_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"/>
        <TextView
            android:id="@+id/signIn"
            android:text="@string/sign_in"
            android:layout_marginStart="@dimen/dp_8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/light_yellow"/>
    </LinearLayout>


        </RelativeLayout>
    </android.support.v4.widget.NestedScrollView>
</RelativeLayout>