<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.NotificationActivity">


    <LinearLayout
        android:id="@+id/backImg"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="3">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1.8">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="fitXY"
                android:src="@drawable/backgrond_" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/white" />
    </LinearLayout>

    <ImageView
        android:id="@+id/logo"
        android:layout_width="200dp"
        android:layout_height="@dimen/dp_120"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/dp_20"
        android:src="@drawable/logo1" />

    <android.support.v4.widget.NestedScrollView
        android:layout_below="@id/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <android.support.v7.widget.CardView
                android:id="@+id/firstCard"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/dp_30"
                android:layout_marginTop="@dimen/dp_20"
                android:layout_marginStart="@dimen/dp_30"
                android:layout_marginEnd="@dimen/dp_30"
                app:cardCornerRadius="@dimen/dp_10">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <LinearLayout
                        android:layout_marginTop="@dimen/dp_20"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/sinText"
                        android:layout_marginStart="@dimen/dp_10"
                        android:layout_marginEnd="@dimen/dp_10"
                        android:orientation="vertical">


                        <TextView
                            android:id="@+id/message"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="@dimen/dp_2"
                            android:padding="@dimen/dp_4"
                            android:text="Heading"
                            android:layout_gravity="center"
                            android:textAlignment="center"
                            android:layout_marginBottom="@dimen/dp_8"
                            android:textStyle="bold"
                            android:textColor="@color/black"
                            android:textSize="@dimen/sp_14" />

                        <TextView
                            android:id="@+id/textService"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="@dimen/dp_2"
                            android:padding="@dimen/dp_4"
                            android:text="@string/services"
                            android:textStyle="bold"
                            android:textColor="@color/black"
                            android:textSize="@dimen/sp_14" />

                        <TextView
                            android:id="@+id/services"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="@dimen/dp_2"
                            android:padding="@dimen/dp_4"
                            android:text="service"
                            android:textColor="@color/black" />

                        <TextView
                            android:id="@+id/textBarberName"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="@dimen/dp_2"
                            android:padding="@dimen/dp_4"
                            android:text="@string/barber_name"
                            android:textStyle="bold"
                            android:textColor="@color/black"
                            android:textSize="@dimen/sp_14" />


                        <TextView
                            android:id="@+id/barberName"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="@dimen/dp_2"
                            android:padding="@dimen/dp_4"
                            android:text="barber name"
                            android:textColor="@color/black" />

                        <TextView
                            android:id="@+id/textAppointment"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="@dimen/dp_2"
                            android:padding="@dimen/dp_4"
                            android:text="@string/appointment_date"
                            android:textStyle="bold"
                            android:textColor="@color/black"
                            android:textSize="@dimen/sp_14" />

                        <TextView
                            android:id="@+id/dateData"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="@dimen/dp_2"
                            android:padding="@dimen/dp_4"
                            android:text="date"
                            android:textColor="@color/black"
                            android:textSize="@dimen/sp_14" />
                       <TextView
                           android:id="@+id/textSlot"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="@dimen/dp_2"
                            android:padding="@dimen/dp_4"
                            android:text="@string/time_slot"
                           android:textStyle="bold"
                            android:textColor="@color/black"
                            android:textSize="@dimen/sp_14" />

                        <TextView
                            android:id="@+id/timeData"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="@dimen/dp_2"
                            android:padding="@dimen/dp_4"
                            android:text="time"
                            android:textColor="@color/black" />



                        <TextView
                            android:id="@+id/textPrice"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="@dimen/dp_2"
                            android:padding="@dimen/dp_4"
                            android:text="@string/price"
                            android:textStyle="bold"
                            android:textColor="@color/black"
                            android:textSize="@dimen/sp_14" />

                        <TextView
                            android:id="@+id/price"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="@dimen/dp_2"
                            android:padding="@dimen/dp_4"
                            android:text="price"
                            android:textColor="@color/black"
                            android:textSize="@dimen/sp_14" />

                        <Button
                            android:id="@+id/Pay"
                            android:layout_marginBottom="@dimen/dp_30"
                            android:layout_marginTop="@dimen/dp_20"
                            android:layout_marginStart="@dimen/dp_20"
                            android:layout_marginEnd="@dimen/dp_20"
                            android:text="@string/pay"
                            android:textColor="@color/white"
                            android:background="@drawable/button_background"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />
                    </LinearLayout>
                </RelativeLayout>

            </android.support.v7.widget.CardView>
        </RelativeLayout>
    </android.support.v4.widget.NestedScrollView>
</RelativeLayout>